# QNTX

./: .gitattributes  .gitignore  .gitmodules  .pr-draft.md  .pre-commit-config.yaml  10THINGS.md  ACTIONS  CANVAS-EXPORT-PLAN.md  CLAUDE.md  CONTEXTS.md  CONTRIBUTING.md  Cargo.toml  ENABLING_CODE_PLUGIN.md  HANDOVER.md  ITEMS  LICENSE  Makefile  README.md  TESTING_SUMMARY.md  am.example.toml  ci.nix  css-consolidation-analysis.md  flake.nix  go.mod  go.sum  go.work  go.work.sum  plan.md  proto.nix  sitegen.nix  test_exact_search.go  test_fuzzy_typos.go  test_multiword_search.go
ats/ax/fuzzy-ax/: Cargo.toml  README.md  integration_test.go
ats/embeddings/: Cargo.toml  README.md  export_model.py
ats/embeddings/embeddings/: cluster_cgo.go  cluster_nocgo.go  embeddings_cgo.go  embeddings_nocgo.go  embeddings_test.go  service.go  types.go
ats/embeddings/examples/: test_embedding.rs  test_semantic_similarity.rs
ats/embeddings/include/: embeddings.h
ats/embeddings/src/: cluster.rs  engine.rs  engine_simple.rs  ffi.rs  lib.rs  reduce.rs  tokenizer.rs  types.rs
ats/vidstream/: Cargo.toml  HANDOVER.md  README.md
ats/vidstream/examples/: benchmark.rs
ats/vidstream/include/: video_engine.h
ats/vidstream/src/: engine.rs  ffi.rs  lib.rs  types.rs
ats/vidstream/vidstream/: types.go  video_cgo.go  video_cgo_test.go  video_nocgo.go
crates/qntx/: Cargo.toml  build.rs
crates/qntx-ax-ext/: Cargo.toml  HANDOVER.md  README.md
crates/qntx-ax-ext/src/: lib.rs
crates/qntx-core/: Cargo.toml
crates/qntx-core/benches/: classify_large_actors.rs
crates/qntx-core/src/: expand.rs  lib.rs  semantic.rs  similarity.rs  temporal.rs  watcher.rs
crates/qntx-duckdb/: Cargo.toml
crates/qntx-duckdb/include/: duckdb_ffi.h
crates/qntx-duckdb/src/: error.rs  ffi.rs  json.rs  lib.rs  migrate.rs
crates/qntx-ffi-common/: Cargo.toml
crates/qntx-ffi-common/src/: lib.rs
crates/qntx-grpc/: Cargo.toml  build.rs
crates/qntx-grpc/src/: error.rs  lib.rs
crates/qntx-indexeddb/: Cargo.toml
crates/qntx-indexeddb/src/: error.rs  idb.rs  lib.rs  proto_convert.rs  store.rs
crates/qntx-inference/: Cargo.toml  README.md
crates/qntx-inference/src/: engine.rs  lib.rs  main.rs  service.rs
crates/qntx-proto/: Cargo.toml  build.rs
crates/qntx-proto/src/: base64_serde.rs  lib.rs  proto_convert.rs  serde_struct.rs  test.rs
crates/qntx-sqlite/: Cargo.toml  FFI.md  README.md
crates/qntx-sqlite/include/: storage_ffi.h
crates/qntx-sqlite/src/: bounded.rs  distill.rs  enforcement.rs  error.rs  ffi.rs  flight_recorder.rs  json.rs  lib.rs  migrate.rs  proto_convert.rs  sql_ffi.rs  store.rs  vec.rs
crates/qntx-sqlite/tests/: crud_tests.rs  query_tests.rs
crates/qntx-wasm/: Cargo.toml  README.md  serve.sh  server.js  test-wasi.sh
crates/qntx-wasm/demo/: index.html
crates/qntx-wasm/src/: browser.rs  identity.rs  lib.rs  wasi.rs
crates/qntx/src/: error.rs  lib.rs  tracing.rs
plugins/qntx-fuzzy/: Cargo.toml  README.md  build.rs  integration_test.go
plugins/qntx-fuzzy/cgo/: fuzzy_cgo.go
plugins/qntx-fuzzy/client/: client.go  wrapper.go
plugins/qntx-fuzzy/proto/: fuzzy.proto
plugins/qntx-fuzzy/src/: engine.rs  ffi.rs  lib.rs  main.rs  service.rs
qntx-claw/: Cargo.toml
qntx-claw/src/: config.rs  handlers.rs  lib.rs  main.rs  service.rs  workspace.rs
qntx-imagegen/: Cargo.toml  TESTING.md
qntx-imagegen/src/: atsstore.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  service.rs
qntx-imagegen/src/pipeline/: clip.rs  mod.rs  scheduler.rs  tokenizer.rs  unet.rs  vae.rs
qntx-plugins/dreamweave/: .gitignore  Makefile  README.md  dune-project  qntx-dreamweave.opam
qntx-plugins/dreamweave/frontend/: build.ts  dev-server.ts  index.html
qntx-plugins/dreamweave/lib/: ats_client.ml  dune  plugin.ml  version.ml  weave.ml
qntx-plugins/gaze/: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
qntx-plugins/gaze/src/: inference.cpp  inference_internal.h  llm_service.cpp  log_capture.h  main.cpp  plugin.cpp  plugin.h  vision.cpp
qntx-plugins/llama-cpp/: CMakeLists.txt  Makefile  README.md  flake.nix
qntx-plugins/llama-cpp/cmake/: embed_string.cmake
qntx-plugins/llama-cpp/src/: ats_client.cpp  ats_client.h  base64.h  camera.h  inference.cpp  llm_service.cpp  log_capture.h  main.cpp  metal_pick.cpp  metal_renderer.cpp  metal_renderer.h  metal_renderer_stub.cpp  nebula-module.js  pdf_extract.cpp  pdf_extract.h  plugin.cpp  plugin.h  shaders.metal  vision.cpp  vocab_projection.cpp  vocab_projection_stub.cpp
qntx-plugins/pty-glyph/: Cargo.toml  Makefile  tsconfig.json
qntx-plugins/pty-glyph/src/: lib.rs  main.rs  pty.rs  websocket.rs
qntx-plugins/pty-glyph/static/: terminal.html
qntx-plugins/pty-glyph/web/: package.json  pty-glyph-module.js  pty-glyph-module.ts
qntx-plugins/qntx-meili/: Cargo.toml  Makefile  README.md  flake.nix
qntx-plugins/qntx-meili/src/: embedded.rs  main.rs  search.rs  service.rs
qntx-plugins/qntx-qdrant/: Cargo.toml  README.md
qntx-plugins/qntx-qdrant/src/: lib.rs  (+6 more)
qntx-plugins/scry/: CMakeLists.txt  Makefile  README.md  flake.nix
qntx-python/: Cargo.toml  README.md  build.rs  flake.nix
qntx-python/src/: atsstore.rs  atsstore_test.rs  config.rs  engine.rs  execution.rs  handlers.rs  lib.rs  main.rs  python.rs  service.rs
qntx-reduce/: Cargo.toml  README.md  flake.nix
qntx-reduce/src/: handlers.rs  main.rs  service.rs
qntx-vidstream/: Cargo.toml  HANDOVER.md  handlers.go  plugin.go
qntx-vidstream/src/: handlers.rs  lib.rs  main.rs  service.rs
qntx-vidstream/web/: vidstream-glyph-module.js
qntx-webscraper/: .gitignore  Makefile  README.md  demo.py  generate_grpc.sh  pyproject.toml  run_plugin.py  test_client.py  test_integration.py  webscraper  webscraper.toml
qntx-webscraper/qntx_webscraper/: __init__.py  atsstore.py  main.py  plugin.py  pulse.py  scraper.py
qntx-webscraper/qntx_webscraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/src-tauri/: Cargo.toml  Info.plist  generate-icons.sh  prepare-sidecar.sh  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
(+2172 files in other folders)
