[workspace]
resolver = "2"
members = [
    "crates/qntx-core",
    "crates/qntx-ffi-common",
    "crates/qntx-grpc",
    "crates/qntx-id",
    "crates/qntx-indexeddb",
    "crates/qntx-proto",
    "crates/qntx-sqlite",
    "crates/qntx-wasm",
    "qntx-plugins/pty-glyph",
    "qntx-plugins/qntx-python",
    "qntx-plugins/qntx-reduce",
    "qntx-plugins/qntx-meili",
    "web/src-tauri",
]
exclude = [
    "ats/ax/fuzzy-ax",      # CGO library for Go, not part of Rust ecosystem
    "ats/embeddings",       # CGO library for Go, not part of Rust ecosystem
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/teranos/QNTX"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"

# WASM size optimization: applies only to qntx-wasm (cdylib for the browser).
# opt-level="s" optimizes for size, strip=true removes symbols.
# Other crates keep the default release profile.
# NOTE: lto is not overridable per-package in cargo, so the previous lto=true
# setting in crates/qntx-wasm/Cargo.toml was silently ignored anyway.
[profile.release.package.qntx-wasm]
opt-level = "s"
strip = true
