[package]
name = "qntx-claw"
version = "0.1.0"
edition.workspace = true
description = "QNTX OpenClaw observability plugin - watches workspace files and ingests changes as attestations"
license.workspace = true
authors = ["QNTX Contributors"]

[[bin]]
name = "qntx-claw-plugin"
path = "src/main.rs"

[dependencies]
# QNTX gRPC infrastructure
qntx-grpc = { path = "../crates/qntx-grpc", features = ["plugin"] }

# gRPC and async
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# File watching
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror.workspace = true
parking_lot.workspace = true
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tempfile = "3"
