[package]
name = "qntx-python-plugin"
version = "0.2.1"
edition = "2021"
description = "QNTX gRPC plugin for running Python code"
license = "MIT"
authors = ["QNTX Contributors"]

[[bin]]
name = "qntx-python-plugin"
path = "src/main.rs"

[dependencies]
# gRPC and async
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Python embedding via PyO3
# REQUIRES Nix build (flake.nix) - provides Python 3.13 deterministically
# Local cargo builds not supported due to platform-specific Python linking issues
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror = "2"
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
