[package]
name = "qntx-python-plugin"
version = "0.4.0"
edition.workspace = true
description = "QNTX gRPC plugin for running Python code"
license.workspace = true
authors = ["QNTX Contributors"]

[[bin]]
name = "qntx-python-plugin"
path = "src/main.rs"

[dependencies]
# QNTX shared library
qntx = { path = "../crates/qntx", features = ["plugin"] }

# gRPC and async
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# Python embedding via PyO3
# REQUIRES Nix build (flake.nix) - provides Python 3.13 deterministically
# Local cargo builds not supported due to platform-specific Python linking issues
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror.workspace = true
parking_lot.workspace = true
