[package]
name = "qntx-embeddings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = "1.0"
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "copy-dylibs"] }
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
ffi = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1