[package]
name = "qntx-vidstream"
version = "0.1.0"
edition = "2021"
description = "Real-time video ingestion (⨳) with frame attestation for QNTX (CGO)"
license = "MIT"
authors = ["QNTX Contributors"]

[dependencies]
# Video decoding - using ffmpeg-next for safe bindings
# Note: Requires ffmpeg development libraries installed on system
ffmpeg-next = { version = "7", optional = true }

# ML inference via ONNX Runtime (recommended for portability)
# Note: Version 2 is still in RC, using latest compatible version
# download-binaries: Auto-download ONNX Runtime binaries for the target platform
# tls-native: Use system's native TLS for HTTPS downloads
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "download-binaries", "tls-native"], optional = true }
ndarray = { version = "0.16", optional = true }

# Image processing
image = "0.25"

# Serialization (for label parsing)
serde_json = "1"

# Concurrency and safety
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Fast hashing for frame deduplication
ahash = "0.8"

# Timestamp handling
chrono = "0.4"

[features]
default = []
# Enable ffmpeg video decoding
ffmpeg = ["dep:ffmpeg-next"]
# Enable ONNX inference
onnx = ["dep:ort", "dep:ndarray"]
# Full video processing pipeline
full = ["ffmpeg", "onnx"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "qntx_vidstream"
path = "src/lib.rs"
# cdylib for shared library (.so/.dylib/.dll)
# staticlib for static library (.a/.lib)
# rlib for Rust library (tests)
crate-type = ["cdylib", "staticlib", "rlib"]
