[package]
name = "qntx-ax-ext"
version = "0.1.0"
edition = "2021"
description = "SQLite loadable extension for AX attestation queries"

[dependencies]
# Core QNTX types and processing (parser, fuzzy, classify, expand)
qntx-core = { path = "../qntx-core", features = ["native"] }

# SQLite loadable extension framework (by Alex Garcia, same author as sqlite-vec)
sqlite-loadable = "0.0.6-alpha.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
