[package]
name = "qntx-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "QNTX gRPC plugin infrastructure and utilities"
publish = false

[dependencies]
# Proto types
qntx-proto = { path = "../qntx-proto", optional = true }

# Serialization (always needed for types)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Types utilities
lazy_static = "1.4"

# Plugin dependencies (optional)
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
http = { version = "1", optional = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
# TODO: Remove protoc-bin-vendored after next version tag when CI container includes protoc
# This is temporary to ensure CI passes until ghcr.io/teranos/qntx:latest is rebuilt with protoc
protoc-bin-vendored = { version = "3.0", optional = true }

[features]
default = ["types"]
types = []
plugin = ["dep:qntx-proto", "dep:tokio", "dep:tokio-stream", "dep:tonic", "dep:prost", "dep:http", "dep:tonic-build", "dep:protoc-bin-vendored"]
