[package]
name = "qntx-indexeddb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IndexedDB storage backend for QNTX attestations (browser WASM)"

[dependencies]
# Core QNTX types
qntx-core = { path = "../qntx-core", default-features = false, features = ["wasm"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# WASM/browser bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "DomException",
    "DomStringList",
    "Event",
    "IdbVersionChangeEvent",
]

[lib]
crate-type = ["cdylib", "rlib"]
