[package]
name = "qntx-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol Buffer types for QNTX"

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
prost-build = "0.13"
# TODO: Remove protoc-bin-vendored after next version tag when CI container includes protoc
# This is temporary to ensure CI passes until ghcr.io/teranos/qntx:latest is rebuilt with protoc
protoc-bin-vendored = "3.0"