[package]
name = "qntx-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite storage backend for QNTX attestations"

[dependencies]
# Proto-generated types (part of proto migration - ADR-006)
qntx-proto = { path = "../qntx-proto" }

# Core QNTX types
qntx-core = { path = "../qntx-core" }

# Shared FFI utilities
qntx-ffi-common = { path = "../qntx-ffi-common" }

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# SQLite vector search extension
sqlite-vec = "0.1.5"
zerocopy = "0.8"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.4"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
ffi = []
