[package]
name = "qntx-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "QNTX WASM bridge - exposes qntx-core functions for Go via wazero"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Proto types - demonstrates WASM can use proto without gRPC dependencies (ADR-006)
qntx-proto = { path = "../qntx-proto" }
qntx-core = { path = "../qntx-core", default-features = false, features = ["wasm"] }
serde_json = { workspace = true }

[profile.release]
opt-level = "s"
lto = true
strip = true
