[package]
name = "qntx-fuzzy"
version = "0.1.0"
edition = "2021"
description = "High-performance fuzzy matching plugin for QNTX"
license = "MIT"
authors = ["QNTX Contributors"]

[features]
default = []
grpc = ["tonic", "prost", "tonic-build"]

[dependencies]
# gRPC / Protobuf (optional, requires protoc)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# String similarity algorithms
strsim = "0.11"           # Levenshtein, Jaro-Winkler, etc.
triple_accel = "0.4"      # SIMD-accelerated edit distance

# Data structures for fast matching
fst = "0.4"               # Finite state transducers for prefix matching
bk-tree = "0.5"           # BK-tree for approximate string matching

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"      # Fast RwLock
ahash = "0.8"             # Fast hashing for vocabulary change detection

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "qntx-fuzzy"
path = "src/main.rs"
required-features = ["grpc"]

[lib]
name = "qntx_fuzzy"
path = "src/lib.rs"
# cdylib for shared library (.so/.dylib/.dll)
# staticlib for static library (.a/.lib)
# rlib for Rust library (tests)
crate-type = ["cdylib", "staticlib", "rlib"]
